# CodePrompt

./: README.md  compiler_error.py  llm_api.py  main.py
GA/: __init__.py  compiler_error.py  data_types.py  error_message_parser.py  ga.py  llm_api.py  main.py  prompts.txt  test.py  test_capture.py
initial_prompts/: init_prompts.json
linked_list/: Cargo.toml
linked_list/src/: linked_list.rs  main.rs  test_linked_list.rs
rust_examples/bigint/: Cargo.toml
rust_examples/bigint/src/: bigint.rs  bigint_src.rs  main.rs  test_bigint.rs
rust_examples/church/: Cargo.toml
rust_examples/church/src/: church.rs  church_src.rs  main.rs  test_church.rs
rust_examples/graph/: Cargo.toml
rust_examples/graph/src/: graph.rs  graph_src.rs  main.rs  test_graph.rs
rust_examples/linked_list/src/: linked_list.rs
rust_examples/mock_storage/: Cargo.toml
rust_examples/mock_storage/src/: main.rs  mock_storage.rs  mock_storage_src.rs  test_mock_storage.rs
rust_examples/src/: lib.rs
rust_examples/src/graph/: graph.rs  test_graph.rs
rust_examples/src/linked_list/: linked_list.rs  test_linked_list.rs
